...
            .font(.largeTitle)
            .bold()
            .padding(200)
    }
    
    var detailsButton: some View {
        Button("Details") {
            isDisplayingDetails.toggle()
        }
        .fullScreenCover(isPresented: $isDisplayingDetails) { MovieDetailsView(movie: movie) }
        .cornerRadius(80)
        .padding(.leading, 200)
    }
...
